--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -4,7 +4,7 @@ $--font-path: "element-plus/theme-chalk/fonts";
 
 @import "element-plus/theme-chalk/src/index";
 
-@import "element-plus/dist/index.css";
+// @import "element-plus/dist/index.css";
 
 #nprogress .bar {
   background: $--color-primary !important;
