--- a/src/styles/element-status.scss
+++ b/src/styles/element-status.scss
@@ -1,3 +1,5 @@
+@use "@/styles/element-variables.scss" as *;
+
 .el-form-item__label {
   color: #606266;
 }
@@ -24,16 +26,16 @@
 }
 
 .el-message .el-icon-success {
-  color: $--color-success;
+  color: $color-success;
 }
 .el-message .el-icon-warning {
-  color: $--color-warning;
+  color: $color-warning;
 }
 .el-message .el-icon-info {
-  color: $--color-primary;
+  color: $color-primary;
 }
 .el-message .el-icon-error {
-  color: $--color-danger;
+  color: $color-danger;
 }
 
 .el-button {
