--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,13 @@
 
-@import '@/styles/global-class.scss';
-@import '@/styles/element-variables.scss';
-@import '@/styles/theme.scss';
-@import '@/styles/element-status.scss';
+// @import './global-class.scss';
+// @import './element-variables.scss';
+// @import './theme.scss';
+// @import './element-status.scss';
+
+@use "@/styles/global-class.scss";
+@use "@/styles/theme.scss";
+@use "@/styles/element-status.scss";
+@use "nprogress/nprogress.css";
 
 body {
   width: 100vw;
